--- a/Shnoozle/Base.lproj/Main.storyboard
+++ b/Shnoozle/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <!--Navigation Controller-->
         <scene sceneID="J86-Nw-xQr">
             <objects>
-                <navigationController id="SHS-KL-jBl" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="contentViewController" id="SHS-KL-jBl" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="dzP-Qy-uxb">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -33,12 +33,12 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="activityIndicator" destination="1Mo-EK-m9k" id="vk6-aP-YAJ"/>
-                        <segue destination="6jV-d4-nl5" kind="presentation" identifier="transitionToHomeController" id="YcL-6b-ooP"/>
+                        <segue destination="FjB-k4-snd" kind="showDetail" identifier="transitionToHomeController" id="cBL-9a-Nrb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="186.5" y="-2.5"/>
+            <point key="canvasLocation" x="292.5" y="145.5"/>
         </scene>
         <!--Record MemoVC-->
         <scene sceneID="roR-5L-dPL">
@@ -52,20 +52,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TT9-yz-cz0">
-                                <rect key="frame" x="0.0" y="0.0" width="91" height="52"/>
-                                <color key="backgroundColor" red="1" green="0.16243877176535937" blue="0.96726548337937734" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="Log Out">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="logOutClicked:" destination="kC0-Pt-0sG" eventType="touchUpInside" id="Ujd-v0-A2y"/>
-                                </connections>
-                            </button>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AYu-yi-yo4" userLabel="recordView">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AYu-yi-yo4" userLabel="recordView">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zky-DF-Nxf" userLabel="recordButton">
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zky-DF-Nxf" userLabel="recordButton">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <state key="normal">
@@ -78,8 +68,8 @@
                                             <segue destination="r5R-Zs-RqR" kind="push" identifier="playMemo" id="ZOt-Jv-Vux"/>
                                         </connections>
                                     </button>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mic.png" translatesAutoresizingMaskIntoConstraints="NO" id="zJ0-Qc-8Q8">
-                                        <rect key="frame" x="59.5" y="173.5" width="256" height="256"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="mic.png" translatesAutoresizingMaskIntoConstraints="NO" id="zJ0-Qc-8Q8">
+                                        <rect key="frame" x="60" y="174" width="256" height="256"/>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="0.062338048889999997" blue="0.10071189480000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -103,15 +93,13 @@
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
-                        <outlet property="logOutButton" destination="TT9-yz-cz0" id="AHS-s1-ggE"/>
                         <outlet property="recordButton" destination="zky-DF-Nxf" id="2o5-WW-wc4"/>
                         <outlet property="recordView" destination="AYu-yi-yo4" id="YJN-z8-9sC"/>
-                        <segue destination="BYZ-38-t0r" kind="presentation" identifier="logOutClicked" id="fuz-00-iPx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fwV-DT-WAh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1302.5" y="-76.5"/>
+            <point key="canvasLocation" x="890.5" y="319.5"/>
         </scene>
         <!--Root View Controller-->
         <scene sceneID="iHF-jh-dFf">
@@ -130,7 +118,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CXU-Hx-QMK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-392" y="-384"/>
+            <point key="canvasLocation" x="-406.5" y="-484.5"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="bed-C4-oN8">
@@ -186,33 +174,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9ML-Om-upu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="178.5" y="-1262.5"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="XRG-N0-UDr">
-            <objects>
-                <viewController storyboardIdentifier="contentViewController" id="lvU-L5-fu4" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="sd0-YD-r0r"/>
-                        <viewControllerLayoutGuide type="bottom" id="TQx-BJ-MhK"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="YGv-Pm-Tlt">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Hp5-Q1-WhN">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <connections>
-                                    <segue destination="BYZ-38-t0r" kind="embed" id="lES-Y1-pr5"/>
-                                </connections>
-                            </containerView>
-                        </subviews>
-                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    </view>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="B5w-Vv-wtW" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="618.5" y="-1236.5"/>
         </scene>
         <!--Alarm-->
         <scene sceneID="ahk-fo-gYG">
@@ -275,10 +236,11 @@
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="Jpf-QE-omL">
                             <connections>
-                                <segue destination="zeU-Kw-qpo" kind="show" id="1qa-d0-XAc"/>
+                                <segue destination="b9Z-XH-8Qs" kind="show" id="ZXV-qX-mZh"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="alarmToggle" destination="nGM-T0-MCB" id="mDU-eW-OPu"/>
@@ -289,7 +251,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FhP-oe-tAL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1625.5" y="-643.5"/>
+            <point key="canvasLocation" x="725.5" y="-1107.5"/>
         </scene>
         <!--Play MemoVC-->
         <scene sceneID="KLb-AE-iEg">
@@ -317,7 +279,7 @@
                                         </connections>
                                     </button>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="play.png" translatesAutoresizingMaskIntoConstraints="NO" id="Zcj-es-CVf">
-                                        <rect key="frame" x="59" y="205.5" width="256" height="256"/>
+                                        <rect key="frame" x="59" y="206" width="256" height="256"/>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x9m-zc-EuL">
                                         <rect key="frame" x="113" y="562" width="149" height="44"/>
@@ -358,7 +320,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6pN-p0-QW9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1782.5" y="612.5"/>
+            <point key="canvasLocation" x="1460.5" y="420.5"/>
         </scene>
         <!--Find FriendsVC-->
         <scene sceneID="AEx-AA-Weg">
@@ -393,7 +355,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CrF-pf-Hw5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2136.5" y="104.5"/>
+            <point key="canvasLocation" x="1504.5" y="-323.5"/>
         </scene>
         <!--Time PickerVC-->
         <scene sceneID="8TJ-XT-lVs">
@@ -439,43 +401,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OrW-BL-KMN" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="xK9-x0-01N" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2689.5" y="-988.5"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="bCy-fc-Vas">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="6jV-d4-nl5" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="UWH-gm-B6B">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="FjB-k4-snd" kind="relationship" relationship="rootViewController" id="Jts-sB-Fb0"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="SLD-na-8ar" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1038.5" y="-643.5"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="7Xe-3n-QCn">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="zeU-Kw-qpo" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="xhA-aO-OIA">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="b9Z-XH-8Qs" kind="relationship" relationship="rootViewController" id="0QQ-bc-3tR"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="SUc-ec-ZXk" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2102.5" y="-988.5"/>
+            <point key="canvasLocation" x="1339.5" y="-1165.5"/>
         </scene>
     </scenes>
     <resources>
@@ -483,7 +409,4 @@
         <image name="mic.png" width="256" height="256"/>
         <image name="play.png" width="256" height="256"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="lES-Y1-pr5"/>
-    </inferredMetricsTieBreakers>
 </document>
